# CereCe_MI_Pipeline

./: INSTALLATION.md  LICENSE  MANIFEST.in  MItest_24-01-27_Meta.csv  MItest_24-01-27_ORN.csv  README.md  constants.py  launch_async_mi_core.py  launch_async_mi_diagnostic.py  launch_record_experiment.py  launch_train_and_save_model.py  pyproject.toml  requirements.txt  unity_connect.py
data/: MItest_24-01-27.sav  MItest_24-01-27_ExG.csv  MItest_24-01-27_Marker.csv  MItest_31-01-25.sav
docs/: detailed_docs.md
src/: __init__.py  analysisMI_classes.py  async_mi_core.py  async_mi_diagnostic_class.py  constants.py  helper_functions.py  mockExplore.py  record_MI_class.py  self_threaded_process_interface.py
