[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mi_bci"
version = "1.0.0"
description = "Motor Imagery Brain-Computer Interface Package"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Cerebruh BCI Team"}
]
maintainers = [
    {name = "Cerebruh BCI Team"}
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11"
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.19.0,<2.0.0",
    "scipy>=1.6.0,<2.0.0",
    "matplotlib>=3.3.0",
    "pandas>=1.2.0",
    "scikit-learn>=1.0.0,<2.0.0",
    "pygame>=2.0.0",
    "explorepy>=1.6.0",
]

[tool.setuptools]
packages = ["mi_bci"]
package-dir = {"mi_bci" = "src"}

[tool.setuptools.package-data]
"mi_bci" = ["*.txt", "*.md", "*.yml", "*.yaml", "*.json"]



[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
